--- a/antora/components/comguide/modules/ROOT/pages/merging-a-pull-request.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/merging-a-pull-request.adoc
@@ -4,11 +4,11 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 :page-partial:
 
-
-
-
-
 The process for merging in github pull requests (so that they can be tested locally before committing) has been scripted in the `github-pr.sh` script.
+
+NOTE: Alternatively, if you are confident using _git_ from within your IDE, 
+consider the specific IDE setup guides xref:conguide:eclipse:about.adoc[Eclipse] 
+and xref:conguide:intellij:about.adoc[IntelliJ].
 
 The script will merge the fork into a temporary branch, and then run a build.
 Once you are happy, you can commit.
