--- a/antora/components/conguide/modules/eclipse/pages/about.adoc
+++ b/antora/components/conguide/modules/eclipse/pages/about.adoc
@@ -2,6 +2,8 @@
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
+== Code Style / Initial IDE Configuration
+
 Additional configuration of Eclipse for contributors (and committers):
 
 * Set up the link:{attachmentsdir}/Apache-Isis.importorder[import order]
@@ -12,3 +14,13 @@ Also:
 * set up the link:{attachmentsdir}/Apache-code-style-template.xml[code style templates]
 * set up link:{attachmentsdir}/Apache-Isis-code-style-cleanup.xml[code style cleanup]
 
+== Prepare for Build
+
+The project/artifact `isis-core-privileged` is required to be an _automatic module_ 
+in the _Java Platform Module System_ (JPMS) sense. (It has unrestricted access to the class-path 
+but not the module-path.)
+
+WARNING: As of time of writing, _Eclipse_ does *not* support automatic module name resolution 
+for projects that are also *opened* in the IDE. Instead it will resolve such module names 
+only from *closed* projects, that previously had been built and installed via _Maven_ to the
+local repository. (Typically `~/.m2/repository`).
